--- a/modules/blavatar/blavatar-admin.css
+++ b/modules/blavatar/blavatar-admin.css
@@ -21,4 +21,44 @@
 .blavatar-content{
 	padding: 10px;
 }
-/* todo: add the mobile styles */
+.blavatar-crop-shell {
+	max-width: 720px;
+}
+.blavatar-crop-image {
+}
+	
+.blavatar-crop-preview-shell {
+	float: right;
+	width: 172px;
+	overflow: hidden;
+}
+.blavatar-crop-preview-shell h3{
+	margin-top: 0;
+}
+.blavatar-crop-favicon-preview-shell{
+	position: relative;
+	margin-bottom: 20px;
+}
+.blavatar-crop-preview-favicon{
+	width:16px;
+	height:16px;
+	overflow:hidden;
+	position: absolute;
+	top:23px;
+	left:102px;
+}
+.blavatar-browser-title{
+	position: absolute;
+	top:23px;
+	left:128px;
+	width:100px;
+	overflow: hidden;
+	height:16px; 
+}
+.blavatar-crop-preview-homeicon {
+	width:64px;
+	height:64px;
+	overflow:hidden;
+	border-radius: 16px;
+}
+
