--- a/_inc/jetpack-admin.css
+++ b/_inc/jetpack-admin.css
@@ -2,20 +2,6 @@
 * Do not modify this file directly.  It is compiled Sass code.
 * @see: jetpack/_inc/jetpack.scss
 */
-@font-face {
-  font-family: 'automatticons';
-  src: url("fonts/automatticons.eot");
-  src: url("fonts/automatticons.eot?#iefix") format("embedded-opentype"), url("fonts/automatticons.woff") format("woff"), url("fonts/automatticons.ttf") format("truetype"), url("fonts/automatticons.svg#automatticonsregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Jetpack';
-  src: url("fonts/jetpack.eot");
-  src: url("fonts/jetpack.eot?#iefix") format("embedded-opentype"), url("fonts/jetpack.ttf") format("truetype"), url("fonts/jetpack.woff") format("woff"), url("fonts/jetpack.svg#jetpack") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
 *,
 *:before,
 *:after {
@@ -325,22 +311,25 @@ hr {
 }
 
 @font-face {
+  font-family: 'automatticons';
+  src: url("fonts/automatticons.eot");
+  src: url("fonts/automatticons.eot?#iefix") format("embedded-opentype"), url("fonts/automatticons.woff") format("woff"), url("fonts/automatticons.ttf") format("truetype"), url("fonts/automatticons.svg#automatticonsregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: "jetpack";
-  src: font-url("jetpack.eot");
-  src: font-url("jetpack.eot?#iefix") format("embedded-opentype"), font-url("jetpack.woff") format("woff"), font-url("jetpack.ttf") format("truetype"), font-url("jetpack.svg#jetpack") format("svg");
+  src: url("fonts/jetpack.eot");
+  src: url("fonts/jetpack.eot?#iefix") format("embedded-opentype"), url("fonts/jetpack.woff") format("woff"), url("fonts/jetpack.ttf") format("truetype"), url("fonts/jetpack.svg#jetpack") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "jetpack";
-    src: font-url("jetpack.svg#jetpack") format("svg");
+    src: url("fonts/jetpack.svg#jetpack") format("svg");
   }
 }
-.jetpack-icon-20:before {
-  content: "\f102";
-}
-
 .nav-horizontal a {
   display: inline-block;
 }
