--- a/_inc/jetpack-icons.css
+++ b/_inc/jetpack-icons.css
@@ -3,38 +3,20 @@
 * @see: jetpack/_inc/jetpack.scss
 */
 @font-face {
-  font-family: 'automatticons';
-  src: url("fonts/automatticons.eot");
-  src: url("fonts/automatticons.eot?#iefix") format("embedded-opentype"), url("fonts/automatticons.woff") format("woff"), url("fonts/automatticons.ttf") format("truetype"), url("fonts/automatticons.svg#automatticonsregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Jetpack';
-  src: url("fonts/jetpack.eot");
-  src: url("fonts/jetpack.eot?#iefix") format("embedded-opentype"), url("fonts/jetpack.ttf") format("truetype"), url("fonts/jetpack.woff") format("woff"), url("fonts/jetpack.svg#jetpack") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
   font-family: "jetpack";
-  src: font-url("jetpack.eot");
-  src: font-url("jetpack.eot?#iefix") format("embedded-opentype"), font-url("jetpack.woff") format("woff"), font-url("jetpack.ttf") format("truetype"), font-url("jetpack.svg#jetpack") format("svg");
+  src: url("fonts/jetpack.eot");
+  src: url("fonts/jetpack.eot?#iefix") format("embedded-opentype"), url("fonts/jetpack.woff") format("woff"), url("fonts/jetpack.ttf") format("truetype"), url("fonts/jetpack.svg#jetpack") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "jetpack";
-    src: font-url("jetpack.svg#jetpack") format("svg");
+    src: url("fonts/jetpack.svg#jetpack") format("svg");
   }
 }
-.jetpack-icon-20:before {
-  content: "\f102";
-}
-
 #toplevel_page_jetpack .wp-menu-image:before {
-  font-family: 'Jetpack' !important;
+  font-family: 'jetpack' !important;
   content: '\f102';
 }
 
